SF Primes/src/objects/ALL_JSTree_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Condition_Field__c</fullName>
        <label>Condition Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Field_Name__c</fullName>
        <label>Description Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Order_Set__c</fullName>
        <label>Field Order Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Field_Name__c</fullName>
        <label>Parent Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ALL JSTree Fields</label>
</CustomObject>